# PictureAnonymizer

./: .gitignore  .gitlab-ci.yml  Procfile  README.md  Untitled.ipynb  db.sqlite3  manage.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yml  test.yml
core/: admin.py  forms.py  google_cloud_picture_storage.py  models.py  urls.py  views.py
core/management/commands/: remove_old_pictures.py
core/migrations/: 0001_initial.py  0002_auto_20210506_1234.py  0003_alter_picture_original_name.py  0004_picture_picture_blurred.py
core/templates/: base.html  dashboard.html  upload_picture.html
photography_anonymizator/: asgi.py  settings.py  urls.py  wsgi.py
photography_anonymizator/settings/: base.py  production.py
src/: blur_faces.py
tests/: test_blur_faces.py  test_dashboard.py  test_home.py  test_picture_model.py  test_upload_picture.py
