[tool.poetry]
name = "photographyanonymizator"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-vision = "^2.3.1"
opencv-python = "^4.5.1"
django = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
